tests/analyzer/errors/unions.ray
union Foo {
    a,
    a,
}

union Bar { a, b }
union Baz { c, d }

fn main() {
    var bar = Bar.a
    bar = Bar.not_a_field
    bar.a

    bar = Baz.c

    var baz = Baz.c

    baz == Baz
    baz == Bar.a

    Baz.c == Bar.a

    1 + Baz.c
}

